Rollback changes to pre-render panes off screen, as it caused too many problem in IE6. Rather, when a hidden !ContentPane is shown, it will now call resize() on all layout widgets that it contains, so that they can correctly layout.
Fixes #5672 !strict.

git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@15972 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -38,26 +38,16 @@
 }
 
 .dijitHidden {
-	/* Hide contents of StackContainer etc. but don't set display:none,
-	   so that nested layout widgets can still render
-	 */
-	 /*visibility: hidden;  setting visibility:hidden is unnecessary? and messes up labels on nested tabs*/
-	 position: absolute !important;
-	 top: -9999px !important;	/* override dijit.layout.layoutChildren setting node.style.top = 0 */
+	/* To hide unselected panes in StackContainer etc. */
+	display: none !important;
 }
 
 .dijitVisible {
 	/* To show selected pane in StackContainer etc. */
-	display: block !important;	/* override style="display:none" on node */
+	display: block !important;	/* override user's display:none setting via style setting or indirectly via class */
 	position: relative;			/* to support setting width/height, see #2033 */
-	top: 0px;
 }
 
-.dj_ie6 .dijitTabContainerNoLayout .dijitHidden {
-	/* work around IE6 bugs in test_TabContainer_noLayout.html page, otherwise nested tab container is hidden */
-	display: none;
-	position: relative !important;
-}
 
 .dj_ie INPUT.dijitTextBox,
 .dj_ie .dijitInputField INPUT {
